--- a/docs/use-cases/sales-project-workspaces.yaml
+++ b/docs/use-cases/sales-project-workspaces.yaml
@@ -1,16 +1,18 @@
 title: Sales & Project Workspaces
 description: Workspace assistants for sales and delivery teams with CRM integration and policy-aware collaboration
-audience: ["end-user", "admin", "business-stakeholder", "sales", "project-manager"]
+audience:
+  - admin
+  - end-user
 version: stable
 owner: platform-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
 table_of_contents:
-  - "Key Capabilities"
-  - "Enterprise Value"
-  - "Example Use Cases"
-  - "Diagram: Sales & Project Workspaces"
+  - Key Capabilities
+  - Enterprise Value
+  - Example Use Cases
+  - 'Diagram: Sales & Project Workspaces'
 custom_links:
   - text: Use Cases
     url: /docs/use-cases/
@@ -26,9 +28,15 @@ custom_links:
       - text: Sales & Project Workspaces
         url: /docs/use-cases/sales-project-workspaces/
 seo:
-  keywords: ["AI Fabrix", "sales workspaces", "project workspaces", "CRM integration", "deal acceleration", "collaboration"]
-  canonical_url: "https://docs.aifabrix.ai/use-cases/sales-project-workspaces"
-  og_image: "images/sales-project-workspaces.png"
+  keywords:
+    - AI Fabrix
+    - sales workspaces
+    - project workspaces
+    - CRM integration
+    - deal acceleration
+    - collaboration
+  canonical_url: https://docs.aifabrix.ai/use-cases/sales-project-workspaces
+  og_image: images/sales-project-workspaces.png
 document360:
   category: Use Cases
   visibility: public
