--- a/docs/enterprise-features/compliance-auditability.yaml
+++ b/docs/enterprise-features/compliance-auditability.yaml
@@ -1,17 +1,19 @@
 title: Compliance & Auditability
 description: Compliance-by-default with ISO-27001 alignment and evidence-ready audits for enterprise AI
-audience: ["admin", "business-stakeholder", "compliance-officer"]
+audience:
+  - admin
+  - end-user
 version: stable
 owner: platform-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
 table_of_contents:
-  - "Compliance-by-Design"
-  - "Audit Trails"
-  - "Evidence & Reporting"
-  - "Benefits"
-  - "Conclusion"
+  - Compliance-by-Design
+  - Audit Trails
+  - Evidence & Reporting
+  - Benefits
+  - Conclusion
 custom_links:
   - text: Enterprise Features
     url: /docs/enterprise-features/
@@ -27,9 +29,16 @@ custom_links:
       - text: Security & Compliance
         url: /docs/enterprise-features/security-compliance/
 seo:
-  keywords: ["AI Fabrix", "compliance", "auditability", "ISO-27001", "audit trails", "evidence", "regulatory"]
-  canonical_url: "https://docs.aifabrix.ai/enterprise-features/compliance-auditability"
-  og_image: "images/compliance-auditability.png"
+  keywords:
+    - AI Fabrix
+    - compliance
+    - auditability
+    - ISO-27001
+    - audit trails
+    - evidence
+    - regulatory
+  canonical_url: https://docs.aifabrix.ai/enterprise-features/compliance-auditability
+  og_image: images/compliance-auditability.png
 document360:
   category: Enterprise Features
   visibility: public
