--- a/docs/enterprise-features/scalability-observability.yaml
+++ b/docs/enterprise-features/scalability-observability.yaml
@@ -1,18 +1,21 @@
 title: Scalability & Observability
 description: Enterprise-scale deployment with Dev→Test→Prod lifecycle and comprehensive observability
-audience: ["admin", "developer", "business-stakeholder"]
+audience:
+  - admin
+  - developer
+  - end-user
 version: stable
 owner: platform-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
 table_of_contents:
-  - "Lifecycle Management"
-  - "Deployment Resilience"
-  - "Observability"
-  - "Cost & Usage Telemetry"
-  - "Benefits"
-  - "Conclusion"
+  - Lifecycle Management
+  - Deployment Resilience
+  - Observability
+  - Cost & Usage Telemetry
+  - Benefits
+  - Conclusion
 custom_links:
   - text: Enterprise Features
     url: /docs/enterprise-features/
@@ -30,9 +33,16 @@ custom_links:
       - text: Security & Compliance
         url: /docs/enterprise-features/security-compliance/
 seo:
-  keywords: ["AI Fabrix", "scalability", "observability", "DevOps", "lifecycle", "monitoring", "telemetry"]
-  canonical_url: "https://docs.aifabrix.ai/enterprise-features/scalability-observability"
-  og_image: "images/scalability-observability.png"
+  keywords:
+    - AI Fabrix
+    - scalability
+    - observability
+    - DevOps
+    - lifecycle
+    - monitoring
+    - telemetry
+  canonical_url: https://docs.aifabrix.ai/enterprise-features/scalability-observability
+  og_image: images/scalability-observability.png
 document360:
   category: Enterprise Features
   visibility: public
