--- a/docs/resources/support-resources.yaml
+++ b/docs/resources/support-resources.yaml
@@ -1,6 +1,9 @@
 title: Support Resources
 description: Comprehensive support resources for AI Fabrix platform users and administrators
-audience: ["end-user", "admin", "developer", "business-stakeholder"]
+audience:
+  - admin
+  - developer
+  - end-user
 version: stable
 owner: support-team
 last_reviewed: '2025-01-15'
@@ -17,9 +20,15 @@ custom_links:
   - text: Modules & Documentation
     url: /docs/modules-documentation/
 seo:
-  keywords: ["AI Fabrix", "support", "resources", "help", "documentation", "training"]
-  canonical_url: "https://docs.aifabrix.ai/resources/support-resources"
-  og_image: "images/support-resources.png"
+  keywords:
+    - AI Fabrix
+    - support
+    - resources
+    - help
+    - documentation
+    - training
+  canonical_url: https://docs.aifabrix.ai/resources/support-resources
+  og_image: images/support-resources.png
 document360:
   category: Resources
   visibility: public
@@ -27,5 +36,3 @@ document360:
   featured: true
   order: 1
 layout: doc
-
-
