--- a/docs/roadmap/multi-cloud-hybrid-support.yaml
+++ b/docs/roadmap/multi-cloud-hybrid-support.yaml
@@ -1,18 +1,21 @@
 title: Multi-Cloud & Hybrid Support
 description: Roadmap for extending AI Fabrix to support hybrid and multi-cloud environments while maintaining governance and compliance
-audience: ["business-stakeholder", "admin", "architect", "cio", "cto"]
+audience:
+  - admin
+  - architect
+  - end-user
 version: stable
 owner: product-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
 table_of_contents:
-  - "Why Multi-Cloud Matters"
-  - "Hybrid Cloud Scenarios"
-  - "Multi-Cloud Governance"
-  - "Technical Direction"
-  - "Release Planning"
-  - "Summary"
+  - Why Multi-Cloud Matters
+  - Hybrid Cloud Scenarios
+  - Multi-Cloud Governance
+  - Technical Direction
+  - Release Planning
+  - Summary
 custom_links:
   - text: Roadmap
     url: /docs/roadmap/
@@ -24,9 +27,15 @@ custom_links:
       - text: Multi-Cloud & Hybrid Support
         url: /docs/roadmap/multi-cloud-hybrid-support/
 seo:
-  keywords: ["AI Fabrix", "multi-cloud", "hybrid cloud", "governance", "compliance", "enterprise AI"]
-  canonical_url: "https://docs.aifabrix.ai/roadmap/multi-cloud-hybrid-support"
-  og_image: "images/multi-cloud-hybrid-support.png"
+  keywords:
+    - AI Fabrix
+    - multi-cloud
+    - hybrid cloud
+    - governance
+    - compliance
+    - enterprise AI
+  canonical_url: https://docs.aifabrix.ai/roadmap/multi-cloud-hybrid-support
+  og_image: images/multi-cloud-hybrid-support.png
 document360:
   category: Roadmap
   visibility: public
