--- a/docs/roadmap/overview.yaml
+++ b/docs/roadmap/overview.yaml
@@ -1,14 +1,17 @@
 title: AI Fabrix Roadmap
 description: Continuous evolution of AI Fabrix to meet enterprise priorities of security, compliance, governance, and scalability
-audience: ["business-stakeholder", "admin", "end-user", "cio", "cto"]
+audience:
+  - admin
+  - architect
+  - end-user
 version: stable
 owner: product-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
 table_of_contents:
-  - "Strategic Direction"
-  - "What's Next"
+  - Strategic Direction
+  - What's Next
 custom_links:
   - text: Overview
     url: /docs/overview/
@@ -42,7 +45,7 @@ seo:
     - feature development
     - enterprise AI roadmap
     - strategic direction
-  canonical_url: "https://docs.aifabrix.ai/roadmap/overview"
+  canonical_url: https://docs.aifabrix.ai/roadmap/overview
   og_image: images/roadmap-overview-preview.png
 document360:
   category: Roadmap
