--- a/docs/use-cases/ai-workloads.yaml
+++ b/docs/use-cases/ai-workloads.yaml
@@ -1,6 +1,8 @@
 title: AI Workload Use Cases
 description: Common AI use cases and applications supported by AI Fabrix platform
-audience: ["end-user", "business-stakeholder", "admin"]
+audience:
+  - admin
+  - end-user
 version: stable
 owner: product-team
 last_reviewed: '2025-01-15'
@@ -17,9 +19,14 @@ custom_links:
   - text: Deployment & Operations
     url: /docs/deployment-operations/
 seo:
-  keywords: ["AI Fabrix", "use cases", "AI workloads", "machine learning", "automation"]
-  canonical_url: "https://docs.aifabrix.ai/use-cases/ai-workloads"
-  og_image: "images/ai-workloads.png"
+  keywords:
+    - AI Fabrix
+    - use cases
+    - AI workloads
+    - machine learning
+    - automation
+  canonical_url: https://docs.aifabrix.ai/use-cases/ai-workloads
+  og_image: images/ai-workloads.png
 document360:
   category: Use Cases
   visibility: public
@@ -27,5 +34,3 @@ document360:
   featured: true
   order: 1
 layout: doc
-
-
