--- a/docs/use-cases/overview.yaml
+++ b/docs/use-cases/overview.yaml
@@ -1,19 +1,21 @@
 title: AI Fabrix Use Cases — Overview
 description: Enterprise-ready AI use cases that balance business impact with compliance and security
-audience: ["business-stakeholder", "end-user", "admin"]
+audience:
+  - admin
+  - end-user
 version: stable
 owner: platform-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
 table_of_contents:
-  - "Microsoft 365 Knowledge Retrieval"
-  - "Policy-Aware Assistants"
-  - "Secure Case Building & Collaboration"
-  - "Sales & Project Workspaces"
-  - "Generic Chatbots vs. Fabrix Use Cases"
-  - "Use Cases — Summary & Enterprise Outcomes"
-  - "Conclusion"
+  - Microsoft 365 Knowledge Retrieval
+  - Policy-Aware Assistants
+  - Secure Case Building & Collaboration
+  - Sales & Project Workspaces
+  - Generic Chatbots vs. Fabrix Use Cases
+  - Use Cases — Summary & Enterprise Outcomes
+  - Conclusion
 custom_links:
   - text: Overview
     url: /docs/overview/
@@ -39,9 +41,16 @@ custom_links:
   - text: Deployment & Operations
     url: /docs/deployment-operations/
 seo:
-  keywords: ["AI Fabrix", "use cases", "Microsoft 365", "knowledge retrieval", "policy-aware", "case building", "sales workspaces"]
-  canonical_url: "https://docs.aifabrix.ai/use-cases/overview"
-  og_image: "images/use-cases-overview.png"
+  keywords:
+    - AI Fabrix
+    - use cases
+    - Microsoft 365
+    - knowledge retrieval
+    - policy-aware
+    - case building
+    - sales workspaces
+  canonical_url: https://docs.aifabrix.ai/use-cases/overview
+  og_image: images/use-cases-overview.png
 document360:
   category: Use Cases
   visibility: public
