feat: implement automated main navigation generation
- Add generate-main-navigation.ts script to automatically sync main site navigation
- Update build-docs.ts to include main navigation generation in build process
- Update site/_data/navigation.yml with new 10-level structure
- Add npm script 'generate-main-nav' for standalone navigation generation
- Ensure main navigation stays in sync with individual section navigation files

This completes the 10-level knowledge base structure with automated navigation management.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build-docs": "ts-node scripts/build-docs.ts",
     "validate": "ts-node scripts/validate-yaml.ts",
     "generate-nav": "ts-node scripts/generate-navigation.ts",
+    "generate-main-nav": "ts-node scripts/generate-main-navigation.ts",
     "merge-metadata": "ts-node scripts/merge-metadata.ts",
     "build-jekyll": "ts-node scripts/build-jekyll.ts",
     "deploy": "ts-node scripts/deploy.ts",
