feat: implement Document360 sync with incremental updates and retry logic
Implement comprehensive Document360 synchronization functionality with advanced features for syncing documentation from local YAML+Markdown files to Document360 platform.

Features:
- Incremental sync: detects existing articles and updates instead of duplicating
- Content change detection: skips articles with no changes to save API calls
- Auto-category management: creates missing categories automatically
- Flexible category resolution: supports both category names and direct IDs
- Orphaned article cleanup: deletes remote articles removed locally
- Retry logic: exponential backoff for transient failures (3 attempts)
- Dry-run mode: safe testing without making actual changes
- Comprehensive error handling: continues on individual failures
- Detailed statistics: reports created/updated/skipped/deleted/failed counts

Implementation:
- Add aifabrix-d360 package for Document360 API client
- Implement getCategoryMap() for category nameID resolution
- Implement getArticleMaps() for article existence checking
- Implement ensureCategoryExists() for auto-category creation
- Implement retryWithBackoff() for resilient API calls
- Implement deleteOrphanedArticles() for cleanup
- Enhanced syncFileToDocument360() with update/skip logic

Configuration:
- Add Document360 environment variables to env.example
- Add npm script: sync-document360
- Default to dry-run mode for safety (SYNC_DRY_RUN=true)

Technical details:
- Total changes: +513 lines, -38 deletions
- Supports 46 documentation files across 11 categories
- YAML+Markdown structure preserved (no file restructuring needed)
- All TypeScript compilation successful
- Ready for testing once API authentication is resolved

Known issue:
Authentication currently returns 401 errors when running the script, however API credentials are verified working via Postman. This indicates the issue is with the aifabrix-d360 client implementation (using v1 API) or request f

--- a/env.example
+++ b/env.example
@@ -11,3 +11,9 @@ JEKYLL_URL=https://docs-dev.aifabrix.ai
 
 # Development vs Production
 NODE_ENV=development
+
+# Document360 Sync Configuration (optional)
+# Uncomment and set these values to enable Document360 sync
+# DOCUMENT360_API_TOKEN=your-api-token-here
+# DOCUMENT360_PROJECT_ID=your-project-version-id-here
+# DOCUMENT360_BASE_URL=https://apihub.document360.io
