--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "eSystems Nordic Oy",
   "license": "MIT",
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^11.12.0",
     "@types/js-yaml": "^4.0.0",
     "@types/node": "^20.0.0",
     "ts-node": "^10.9.0",
