--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "resolvePackageJsonExports": true,
+    "resolvePackageJsonImports": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
